--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -12,6 +12,10 @@
   <uses-permission android:name="android.permission.BLUETOOTH"/>
   <uses-permission android:name="android.permission.BLUETOOTH_ADMIN"/>
   <uses-permission android:name="android.permission.READ_CONTACTS"/>
+  <uses-permission android:name="android.permission.RECORD_AUDIO"/>
+
+
+  <uses-feature android:glEsVersion="0x00020000" android:required="true" />
 
   <application
       android:allowBackup="true"
@@ -21,13 +25,16 @@
       android:supportsRtl="true"
       android:theme="@style/AppTheme"
       tools:ignore="GoogleAppIndexingWarning">
-    <activity android:name="com.fengwei23.androidsample.MainActivity">
+    <activity android:name=".MainActivity">
+    </activity>
+    <activity android:name=".ScreenRecorderActivity">
       <intent-filter>
         <action android:name="android.intent.action.MAIN"/>
-
         <category android:name="android.intent.category.LAUNCHER"/>
       </intent-filter>
     </activity>
+
+    <service android:name=".service.ScreenRecorderService"/>
   </application>
 
 </manifest>
