--- a/build.gradle
+++ b/build.gradle
@@ -1,7 +1,7 @@
 // Top-level build file where you can add configuration options common to all sub-projects/modules.
 
 buildscript {
-  ext.kotlin_version = '1.3.72'
+  apply from: "config.gradle"
 
   repositories {
     maven { url 'http://maven.aliyun.com/nexus/content/groups/public/' }
