--- a/easypermissions/build.gradle
+++ b/easypermissions/build.gradle
@@ -2,13 +2,12 @@ apply plugin: 'com.android.library'
 apply plugin: 'kotlin-android'
 
 android {
-  compileSdkVersion 28
-
+  compileSdkVersion rootProject.ext.android.compileSdkVersion
 
 
   defaultConfig {
-    minSdkVersion 21
-    targetSdkVersion 28
+    minSdkVersion rootProject.ext.android.minSdkVersion
+    targetSdkVersion rootProject.ext.android.targetSdkVersion
     versionCode 1
     versionName "1.0"
 
@@ -24,14 +23,8 @@ android {
 }
 
 dependencies {
-  implementation fileTree(dir: 'libs', include: ['*.jar'])
-
-  implementation 'androidx.appcompat:appcompat:1.1.0'
-  testImplementation 'junit:junit:4.12'
-  androidTestImplementation 'androidx.test.ext:junit:1.1.1'
-  androidTestImplementation 'androidx.test.espresso:espresso-core:3.1.0'
+  implementation rootProject.ext.dependencies.kotlin
+  implementation rootProject.ext.dependencies.appcompat
   implementation "org.jetbrains.kotlin:kotlin-stdlib-jdk7:$kotlin_version"
 }
-repositories {
-  mavenCentral()
-}
+
