--- a/screenrecorderdemo/build.gradle
+++ b/screenrecorderdemo/build.gradle
@@ -2,11 +2,11 @@ apply plugin: 'com.android.application'
 apply plugin: 'kotlin-android'
 
 android {
-  compileSdkVersion 29
+  compileSdkVersion rootProject.ext.android.compileSdkVersion
   defaultConfig {
     applicationId "com.fengwei23.androidtest"
-    minSdkVersion 25
-    targetSdkVersion 29
+    minSdkVersion rootProject.ext.android.minSdkVersion
+    targetSdkVersion rootProject.ext.android.targetSdkVersion
     versionCode 1
     versionName "1.0"
     testInstrumentationRunner 'androidx.test.runner.AndroidJUnitRunner'
@@ -21,11 +21,9 @@ android {
 
 dependencies {
   implementation project(':easypermissions')
-  implementation 'androidx.appcompat:appcompat:1.1.0'
-  implementation fileTree(include: ['*.jar'], dir: 'libs')
   implementation project(':screenrecorder')
-  implementation "org.jetbrains.kotlin:kotlin-stdlib-jdk7:$kotlin_version"
+  implementation fileTree(include: ['*.jar'], dir: 'libs')
+  implementation rootProject.ext.dependencies.kotlin
+  implementation rootProject.ext.dependencies.appcompat
 }
-repositories {
-  mavenCentral()
-}
+
