--- a/config.gradle
+++ b/config.gradle
@@ -1,5 +1,10 @@
 ext {
   kotlin_version = '1.3.72'
+  roomVersion = '2.2.5'
+  archLifecycleVersion = '2.2.0'
+  coreTestingVersion = '2.1.0'
+  materialVersion = '1.1.0'
+  coroutines = '1.3.4'
 
   android = [
       compileSdkVersion: 29,
@@ -11,6 +16,6 @@ ext {
   dependencies = [
       "kotlin": "org.jetbrains.kotlin:kotlin-stdlib-jdk7:$kotlin_version",
       "appcompat": 'androidx.appcompat:appcompat:1.1.0',
-      "documentfile":'androidx.documentfile:documentfile:1.0.1'
+      "documentfile": 'androidx.documentfile:documentfile:1.0.1'
   ]
 }
