update navigation demo

--- a/config.gradle
+++ b/config.gradle
@@ -5,6 +5,7 @@ ext {
   coreTestingVersion = '2.1.0'
   materialVersion = '1.1.0'
   coroutines = '1.3.4'
+  navigationVersion = "2.1.0"
 
   android = [
       compileSdkVersion: 29,
