feat(dagger): add dagger sample

--- a/settings.gradle
+++ b/settings.gradle
@@ -1,3 +1,4 @@
+include ':daggersample'
 include ':navigationsample'
 include ':roomwordsample'
 include ':screenrecorderdemo', ':easypermissions', ':screenrecorder'
