--- a/daggersample/build.gradle
+++ b/daggersample/build.gradle
@@ -1,14 +1,14 @@
 apply plugin: 'com.android.application'
 apply plugin: 'kotlin-android'
 apply plugin: 'kotlin-android-extensions'
-apply plugin: 'androidx.navigation.safeargs.kotlin'
+apply plugin: 'kotlin-kapt'
 
 android {
   compileSdkVersion 29
   buildToolsVersion "29.0.3"
 
   defaultConfig {
-    applicationId "com.fengwei23.navigationsample"
+    applicationId "com.fengwei23.daggersample"
     minSdkVersion 21
     targetSdkVersion 29
     versionCode 1
@@ -24,16 +24,12 @@ android {
     }
   }
 
-  buildFeatures {
-    dataBinding = true
+  compileOptions {
+    sourceCompatibility JavaVersion.VERSION_1_8
+    targetCompatibility JavaVersion.VERSION_1_8
   }
-
-  lintOptions {
-    abortOnError false
-  }
-
   kotlinOptions {
-    jvmTarget = JavaVersion.VERSION_1_8
+    jvmTarget = "1.8"
   }
 }
 
@@ -43,9 +39,10 @@ dependencies {
   implementation 'androidx.core:core-ktx:1.3.0'
   implementation 'androidx.appcompat:appcompat:1.1.0'
   implementation 'androidx.constraintlayout:constraintlayout:1.1.3'
-  implementation 'androidx.navigation:navigation-fragment-ktx:2.1.0'
-  implementation 'androidx.navigation:navigation-ui-ktx:2.1.0'
   testImplementation 'junit:junit:4.13'
   androidTestImplementation 'androidx.test.ext:junit:1.1.1'
   androidTestImplementation 'androidx.test.espresso:espresso-core:3.2.0'
+  def dagger_version = "2.28.3"
+  implementation "com.google.dagger:dagger:$dagger_version"
+  kapt "com.google.dagger:dagger-compiler:$dagger_version"
 }
