--- a/roomwordsample/build.gradle
+++ b/roomwordsample/build.gradle
@@ -26,6 +26,14 @@ android {
   packagingOptions {
     exclude 'META-INF/atomicfu.kotlin_module'
   }
+
+  compileOptions {
+    sourceCompatibility JavaVersion.VERSION_1_8
+    targetCompatibility JavaVersion.VERSION_1_8
+  }
+  kotlinOptions {
+    jvmTarget = "1.8"
+  }
 }
 
 dependencies {
@@ -43,6 +51,7 @@ dependencies {
 
   // Lifecycle components
   implementation "androidx.lifecycle:lifecycle-extensions:$rootProject.archLifecycleVersion"
+  //noinspection LifecycleAnnotationProcessorWithJava8
   kapt "androidx.lifecycle:lifecycle-compiler:$rootProject.archLifecycleVersion"
   implementation "androidx.lifecycle:lifecycle-viewmodel-ktx:$rootProject.archLifecycleVersion"
 
@@ -55,6 +64,6 @@ dependencies {
   implementation "com.google.android.material:material:$rootProject.materialVersion"
 
   // Testing
-  testImplementation 'junit:junit:4.12'
+  testImplementation 'junit:junit:4.13'
   androidTestImplementation "androidx.arch.core:core-testing:$rootProject.coreTestingVersion"
 }
