--- a/daggersample/build.gradle
+++ b/daggersample/build.gradle
@@ -24,6 +24,16 @@ android {
     }
   }
 
+  sourceSets {
+    String sharedTestDir = 'src/sharedTest/java'
+    test {
+      java.srcDir sharedTestDir
+    }
+    androidTest {
+      java.srcDir sharedTestDir
+    }
+  }
+
   compileOptions {
     sourceCompatibility JavaVersion.VERSION_1_8
     targetCompatibility JavaVersion.VERSION_1_8
@@ -39,10 +49,18 @@ dependencies {
   implementation 'androidx.core:core-ktx:1.3.0'
   implementation 'androidx.appcompat:appcompat:1.1.0'
   implementation 'androidx.constraintlayout:constraintlayout:1.1.3'
-  testImplementation 'junit:junit:4.13'
-  androidTestImplementation 'androidx.test.ext:junit:1.1.1'
-  androidTestImplementation 'androidx.test.espresso:espresso-core:3.2.0'
   def dagger_version = "2.28.3"
   implementation "com.google.dagger:dagger:$dagger_version"
   kapt "com.google.dagger:dagger-compiler:$dagger_version"
+
+
+  testImplementation 'junit:junit:4.13'
+  testImplementation 'org.mockito:mockito-core:3.3.3'
+  testImplementation 'android.arch.core:core-testing:1.1.1'
+  def androidx_test_version = "1.2.0"
+  androidTestImplementation "androidx.test:runner:$androidx_test_version"
+  androidTestImplementation "androidx.test:core-ktx:$androidx_test_version"
+  androidTestImplementation 'androidx.test.espresso:espresso-core:3.2.0'
+
+  kaptAndroidTest "com.google.dagger:dagger-compiler:$dagger_version"
 }
