--- a/navigationsample/src/main/AndroidManifest.xml
+++ b/navigationsample/src/main/AndroidManifest.xml
@@ -15,6 +15,7 @@
 
         <category android:name="android.intent.category.LAUNCHER" />
       </intent-filter>
+      <nav-graph android:value="@navigation/mobile_navigation" />
     </activity>
     <receiver android:name=".DeepLinkAppWidgetProvider">
       <intent-filter>
